--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,22 @@
 		}
 	],
 	"require": {
-		"php": "^7.3",
+		"php": "^8.1",
 		"ext-json": "*",
 		"league/flysystem": "^2.0",
 		"psr/log": "^1.1"
 	},
 	"require-dev": {
-		"68publishers/doctrine-bridge": "^0.1.1",
-		"doctrine/orm": "^2.8",
-		"friendsofphp/php-cs-fixer": "^2.0",
-		"latte/latte": "^2.7",
-		"nette/di": "^3.0.3",
-		"nette/tester": "^2.3.4",
-		"roave/security-advisories": "dev-master",
-		"symfony/console": "^4.0 | ^5.0"
+		"68publishers/doctrine-bridge": "^1.0",
+		"friendsofphp/php-cs-fixer": "^3.13",
+		"nette/bootstrap": "^3.1",
+		"nette/tester": "^2.4.3",
+		"phpstan/phpstan": "^1.9",
+		"phpstan/phpstan-nette": "^1.1",
+		"roave/security-advisories": "dev-latest",
+		"latte/latte": "^2.7 || ^3.0",
+		"nette/di": "^3.0.10",
+		"symfony/console": "^5.0 | ^6.0"
 	},
 	"suggest": {
 		"nette/di": "For an integration with Nette Framework.",
@@ -32,11 +34,11 @@
 		"symfony/console": "If you want to use a console commands."
 	},
 	"conflict": {
-		"nette/di": "<3.0",
+		"nette/di": "<3.0.10",
 		"nette/schema": "<1.1",
 		"latte/latte": "<2.7",
-		"68publishers/doctrine-bridge": "<0.1.1",
-		"symfony/console": "<4.0"
+		"68publishers/doctrine-bridge": "<1.0",
+		"symfony/console": "<5.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -50,19 +52,5 @@
 	},
 	"config": {
 		"sort-packages": true
-	},
-	"scripts": {
-		"tests": [
-			"@tests:lowest",
-			"@tests:highest"
-		],
-		"tests:lowest" : [
-			"@composer update --no-progress --prefer-dist --prefer-lowest --prefer-stable",
-			"vendor/bin/tester ./tests"
-		],
-		"tests:highest" : [
-			"@composer update --no-progress --prefer-dist --prefer-stable",
-			"vendor/bin/tester ./tests"
-		]
 	}
 }
