--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,21 @@
 	"require": {
 		"php": "^8.1",
 		"ext-json": "*",
-		"league/flysystem": "^2.0",
+		"league/flysystem": "^3.12",
 		"psr/log": "^1.1"
 	},
 	"require-dev": {
 		"68publishers/doctrine-bridge": "^1.0",
 		"friendsofphp/php-cs-fixer": "^3.13",
+		"latte/latte": "^2.7 || ^3.0",
+		"league/flysystem-memory": "^3.10",
+		"mockery/mockery": "^1.5",
 		"nette/bootstrap": "^3.1",
+		"nette/di": "^3.0.10",
 		"nette/tester": "^2.4.3",
 		"phpstan/phpstan": "^1.9",
 		"phpstan/phpstan-nette": "^1.1",
 		"roave/security-advisories": "dev-latest",
-		"latte/latte": "^2.7 || ^3.0",
-		"nette/di": "^3.0.10",
 		"symfony/console": "^5.0 | ^6.0"
 	},
 	"suggest": {
