Tests + PHPStan level 9 + Dependency update
- updated minimal required version of `latte` to `^3.0`
- added all missing tests
- changed PHPStan level to `9`
- fixed all PHPStan issues
- updated README

--- a/tests/Bridge/Nette/DI/config/FileStorage/config.withCustomFileStorageDefinitionFactoryExtension.neon
+++ b/tests/Bridge/Nette/DI/config/FileStorage/config.withCustomFileStorageDefinitionFactoryExtension.neon
@@ -8,4 +8,4 @@ file_storage:
 	storages:
 		custom:
 			filesystem:
-				adapter: League\Flysystem\Local\LocalFilesystemAdapter(%cwd%/data/default)
+				adapter: League\Flysystem\InMemory\InMemoryFilesystemAdapter()
