--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,12 @@
 	},
 	"require-dev": {
 		"68publishers/doctrine-bridge": "^1.0",
+		"doctrine/dbal": "^2.13.1 || ^3.1.1",
 		"friendsofphp/php-cs-fixer": "^3.13",
-		"latte/latte": "^2.7 || ^3.0",
+		"latte/latte": "^3.0",
 		"league/flysystem-memory": "^3.10",
 		"mockery/mockery": "^1.5",
+		"nette/application": "^3.1.8",
 		"nette/bootstrap": "^3.1",
 		"nette/di": "^3.0.10",
 		"nette/tester": "^2.4.3",
@@ -38,7 +40,7 @@
 	"conflict": {
 		"nette/di": "<3.0.10",
 		"nette/schema": "<1.1",
-		"latte/latte": "<2.7",
+		"latte/latte": "<3.0",
 		"68publishers/doctrine-bridge": "<1.0",
 		"symfony/console": "<5.0"
 	},
