--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"68publishers/doctrine-bridge": "^1.0",
 		"doctrine/dbal": "^2.13.1 || ^3.1.1",
 		"friendsofphp/php-cs-fixer": "^3.13",
+		"kubawerlos/php-cs-fixer-custom-fixers": "^3.13",
 		"latte/latte": "^3.0",
 		"league/flysystem-memory": "^3.10",
 		"mockery/mockery": "^1.5",
