--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	"require": {
 		"php": "^8.1",
 		"ext-json": "*",
+		"ext-fileinfo": "*",
 		"league/flysystem": "^3.12",
 		"psr/log": "^1.1"
 	},
