--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"ext-json": "*",
 		"ext-fileinfo": "*",
 		"league/flysystem": "^3.12",
-		"psr/log": "^1.1"
+		"psr/log": "^1.1 || ^2.0 || ^3.0"
 	},
 	"require-dev": {
 		"68publishers/doctrine-bridge": "^1.0",
