--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
 	],
 	"require": {
 		"php": "^8.1",
-		"ext-json": "*",
 		"ext-fileinfo": "*",
+		"ext-json": "*",
 		"league/flysystem": "^3.12",
+		"psr/http-message": "^2.0",
 		"psr/log": "^1.1 || ^2.0 || ^3.0"
 	},
 	"require-dev": {
@@ -21,6 +22,7 @@
 		"doctrine/dbal": "^2.13.1 || ^3.1.1",
 		"fig/log-test": "^1.1",
 		"friendsofphp/php-cs-fixer": "^3.13",
+		"guzzlehttp/psr7": "^2.7",
 		"kubawerlos/php-cs-fixer-custom-fixers": "^3.13",
 		"latte/latte": "^3.0",
 		"league/flysystem-memory": "^3.10",
