--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,21 +16,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.1
-          coverage: none
-          extensions: tokenizer
+          php-version: 8.4
+          coverage: pcov
+          extensions: tokenizer, uopz
           tools: composer:v2
 
       - name: Install dependencies
-        run: composer update --no-progress --prefer-dist --prefer-stable --optimize-autoloader --quiet
+        run: composer update --no-progress --prefer-dist --prefer-stable --optimize-autoloader
 
       - name: Generate the coverage report
-        run: vendor/bin/tester -p phpdbg -C -s --coverage ./coverage.xml --coverage-src ./src ./tests
+        run: vendor/bin/tester -C -s --coverage ./coverage.xml --coverage-src ./src ./tests
 
       - name: Upload the coverage report
         env:
